2000-10-26 22:10 GMT -3 Luiz Rafael Culik <culik@sl.conex.net>
   *Changelog
      renamed to ChangeLog.009 and started an new one
   *doc/genhtm.rsp
       +Tbrowse.txt added
   +doc/en/tbrowse.txt
        *Document for tbrowse class. please  note this is still in progress
   *source/rtl/tbrowse.prg
        +Clipper 5.3 applykey() and setkey() methods added
   *test/testbrw.prg
        *Small changes to allow the use of applykey() method if is compiled
        with HB_COMPAT_C53
   *utils/hbdoc/genhtm.prg
    utils/hbdoc/genrtf.prg
    utils/hbdoc/html.prg
    utils/hbdoc/rtf.prg
        *Small changes when the $CLASSDOC$ is used for class documenting
   * source/pp/pragma.c
   * contrib/dot/pp_harb.ch
   * tests/inline_c.prg
     * STOPDUMP renamed as ENDDUMP (with Ron permission)

2001-12-21 08:40 UTC-0300 Luiz Rafael Culik <culik@sl.conex.net>
   * utils/hbmake/hbmake.prg
    * small fix

2001-12-21 07:50 UTC-0300 Luiz Rafael Culik <culik@sl.conex.net>
  * source/rtl/filesys.c
    * hb_fsmkdir,hb_fsChdir,hb_fsRmdir,hb_fsDelete,hb_fsRename,hb_fsCurdirBuff()
      now use Win32 API calls
   * utils/hbmake/hbmake.prg
     ! Disabled profile
   * utils/hbmake/hbmutils.prg
     * An small clean up
   * ChangeLog
     * Renamed to ChangeLog.012 and started an new one
2006-02-15 13:50 UTC+0100 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * harbour/source/vm/hvm.c
    ! fixed memory leak I introduced changing Ryszard modifications

      need such functionality yet
  + harbour/ChangeLog.015
  * harbour/source/vm/debug.c

  * harbour/harbour.spec
  * harbour/bin/hb-func.sh
    * some modification in xhb* scripts building - adding passing
      predefined compiler and linker switches
  * harbour/source/vm/hvm.c
    * minor code cleanup

2006-09-03 18:55 UTC+0200 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * harbour/include/hbapicls.h
  * harbour/source/vm/classes.c
  * harbour/source/vm/hvm.c
  * harbour/tests/overload.prg