@@ -1,3 +1,13 @@
+2000-10-27 10:40 UTC+0100 Ryszard Glab <rglab@imid.med.pl>
+
+    *include/hbrddcdx.h
+        *some comments added
+        
+    *source/rdd/dbfcdx/dbfcdx1.c
+        * result of macro evaluation (hb_macroRun()) has to be popped
+        from the stack
+        * added some comments
+
 2000-10-26 22:10 GMT -3 Luiz Rafael Culik <culik@sl.conex.net>
    *Changelog
       renamed to ChangeLog.009 and started an new one
